--- a/ML/project-4/RNN.ipynb
+++ b/ML/project-4/RNN.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "id": "ZX4OI6Pswehg"
    },
@@ -26,14 +26,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "qkZpes7KwmRz",
-    "outputId": "7c831a7e-ad60-473e-d277-575a0a0bcba2"
-   },
+   "execution_count": 180,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -724,20 +718,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 183,
    "metadata": {
     "id": "B0DnyQLO2M2F"
    },
    "outputs": [],
    "source": [
     "def train(model, optimizer, loss_f, num_epochs, train_loader):\n",
+    "    model.to(device)\n",
+    "\n",
     "    losses = []\n",
     "    \n",
     "    for epoch in range(num_epochs):\n",
     "        model.train()\n",
     "        epoch_loss = 0\n",
     "        for inputs, labels in train_loader:\n",
-    "            labels = labels.long()\n",
+    "            inputs = inputs.to(device)\n",
+    "            labels = labels.to(device).long()\n",
+    "\n",
     "            outputs = model(inputs)\n",
     "            loss = loss_f(outputs, labels)\n",
     "            optimizer.zero_grad()\n",
@@ -749,7 +747,7 @@
     "        avg_loss = epoch_loss / len(train_loader)\n",
     "        losses.append(avg_loss)\n",
     "\n",
-    "        print(f\"Epoch {epoch+1}/{num_epochs}, Loss: {avg_loss}\")\n",
+    "        # print(f\"Epoch {epoch+1}/{num_epochs}, Loss: {avg_loss}\")\n",
     "    \n",
     "    return losses"
    ]
@@ -763,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -782,6 +780,8 @@
     "\n",
     "\n",
     "def evaluate(model, test_loader):\n",
+    "    model.to(device)\n",
+    "\n",
     "    model.eval()\n",
     "    correct = 0\n",
     "    total = 0\n",
@@ -790,7 +790,9 @@
     "    \n",
     "    with torch.no_grad():\n",
     "        for inputs, labels in test_loader:\n",
-    "            # inputs, labels = inputs.to(device), labels.to(device)\n",
+    "            inputs = inputs.to(device)\n",
+    "            labels = labels.to(device)\n",
+    "\n",
     "            outputs = model(inputs)\n",
     "            _, predicted = torch.max(outputs, 1)\n",
     "            correct += (predicted == labels).sum().item()\n",
@@ -917,57 +919,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Función de búsqueda en cuadrícula de hiperparámetros\n",
-    "def grid_search(param_grid):\n",
+    "def grid_search_w2v(param_grid):\n",
     "    best_accuracy = 0\n",
     "    best_params = {}\n",
     "\n",
-    "    # Iterar sobre todas las combinaciones posibles de hiperparámetros\n",
     "    for hidden_size in param_grid['hidden_size']:\n",
     "        for learning_rate in param_grid['learning_rate']:\n",
     "            for batch_size in param_grid['batch_size']:\n",
-    "                for num_epochs in param_grid['num_epochs']:\n",
+    "                train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
+    "                test_loader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False)\n",
     "\n",
-    "                    # Crear DataLoader con el tamaño de batch actual\n",
-    "                    train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
-    "                    test_loader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False)\n",
+    "                model = LSTM(input_size=100, hidden_size=hidden_size, output_size=2)\n",
     "\n",
-    "                    # Inicializar el modelo LSTM con los parámetros actuales\n",
-    "                    model = LSTM(input_size=100, hidden_size=hidden_size, output_size=2)\n",
+    "                model.to(device)\n",
     "\n",
-    "                    # Inicializar la función de pérdida y el optimizador\n",
-    "                    loss_function_LSTM = torch.nn.CrossEntropyLoss()\n",
-    "                    optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)\n",
+    "                loss_function_LSTM = torch.nn.CrossEntropyLoss()\n",
+    "                optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)\n",
     "\n",
-    "                    # # Entrenar el modelo\n",
-    "                    # print(f\"Entrenando con hidden_size={hidden_size}, num_layers={num_layers}, \"\n",
-    "                    #         f\"learning_rate={learning_rate}, batch_size={batch_size}, num_epochs={num_epochs}\")\n",
-    "                    losses = train(model, optimizer, loss_function_LSTM, num_epochs, train_loader)\n",
+    "                losses = train(model, optimizer, loss_function_LSTM, 30, train_loader)\n",
     "\n",
-    "                    # Evaluar el modelo\n",
-    "                    accuracy, _, _ = evaluate(model, test_loader)\n",
-    "                    print(f\"Accuracy con hidden_size={hidden_size}, learning_rate={learning_rate}, batch_size={batch_size}, num_epochs={num_epochs}: {accuracy * 100:.2f}%\")\n",
+    "                accuracy, _, _ = evaluate(model, test_loader)\n",
+    "                print(f\"Accuracy con hidden_size={hidden_size}, learning_rate={learning_rate}, batch_size={batch_size}, num_epochs=30: {accuracy * 100:.2f}%\")\n",
     "\n",
-    "                    # Guardar la mejor configuración\n",
-    "                    if accuracy > best_accuracy:\n",
-    "                        best_accuracy = accuracy\n",
-    "                        best_params = {\n",
-    "                            'hidden_size': hidden_size,\n",
-    "                            'learning_rate': learning_rate,\n",
-    "                            'batch_size': batch_size,\n",
-    "                            'num_epochs': num_epochs\n",
-    "                        }\n",
+    "                # Guardar la mejor configuración\n",
+    "                if accuracy > best_accuracy:\n",
+    "                    best_accuracy = accuracy\n",
+    "                    best_params = {\n",
+    "                        'hidden_size': hidden_size,\n",
+    "                        'learning_rate': learning_rate,\n",
+    "                        'batch_size': batch_size,\n",
+    "                        'losses': losses\n",
+    "                    }\n",
     "    \n",
     "    return best_accuracy, best_params"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1039,12 +1032,11 @@
     "param_grid = {\n",
     "    'hidden_size': [64, 128, 256],              # Diferentes tamaños de la capa oculta\n",
     "    'learning_rate': [0.001, 0.0005, 0.0001],   # Diferentes tasas de aprendizaje\n",
-    "    'batch_size': [64, 128],                    # Tamaño del batch\n",
-    "    'num_epochs': [10, 20, 30]                  # Número de épocas para entrenar\n",
+    "    'batch_size': [32, 64, 128],                # Tamaño del batch\n",
     "}\n",
     "\n",
     "# Realizar búsqueda en cuadrícula\n",
-    "best_accuracy, best_params = grid_search(param_grid)\n",
+    "best_accuracy, best_params = grid_search_w2v(param_grid)\n",
     "\n",
     "# Imprimir los mejores parámetros y la precisión\n",
     "print(f\"\\nMejores parámetros: {best_params}\")\n",
@@ -1147,6 +1139,65 @@
    "metadata": {},
    "source": [
     "#### TF-IDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def grid_search_tfidf(param_grid):\n",
+    "    best_accuracy = 0\n",
+    "    best_params = {}\n",
+    "\n",
+    "    for hidden_size in param_grid['hidden_size']:\n",
+    "        for learning_rate in param_grid['learning_rate']:\n",
+    "            for batch_size in param_grid['batch_size']:\n",
+    "                train_loader = DataLoader(train_dataset_tfidf, batch_size=batch_size, shuffle=True)\n",
+    "                test_loader = DataLoader(test_dataset_tfidf, batch_size=batch_size, shuffle=False)\n",
+    "\n",
+    "                model = LSTM(input_size=5000, hidden_size=hidden_size, output_size=2, type_='tfidf')\n",
+    "\n",
+    "                model.to(device)\n",
+    "\n",
+    "                loss_function_LSTM = torch.nn.CrossEntropyLoss()\n",
+    "                optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)\n",
+    "\n",
+    "                losses = train(model, optimizer, loss_function_LSTM, 30, train_loader)\n",
+    "\n",
+    "                accuracy, _, _ = evaluate(model, test_loader)\n",
+    "                print(f\"Accuracy con hidden_size={hidden_size}, learning_rate={learning_rate}, batch_size={batch_size}, num_epochs=30: {accuracy * 100:.2f}%\")\n",
+    "\n",
+    "                # Guardar la mejor configuración\n",
+    "                if accuracy > best_accuracy:\n",
+    "                    best_accuracy = accuracy\n",
+    "                    best_params = {\n",
+    "                        'hidden_size': hidden_size,\n",
+    "                        'learning_rate': learning_rate,\n",
+    "                        'batch_size': batch_size,\n",
+    "                        'losses': losses\n",
+    "                    }\n",
+    "    \n",
+    "    return best_accuracy, best_params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param_grid = {\n",
+    "    'hidden_size': [64, 128, 256],              # Diferentes tamaños de la capa oculta\n",
+    "    'learning_rate': [0.001, 0.0005, 0.0001],   # Diferentes tasas de aprendizaje\n",
+    "    'batch_size': [32, 64, 128],                # Tamaño del batch\n",
+    "}\n",
+    "\n",
+    "best_accuracy, best_params = grid_search_tfidf(param_grid)\n",
+    "\n",
+    "print(f\"\\nMejores parámetros: {best_params}\")\n",
+    "print(f\"Mejor Accuracy: {best_accuracy * 100:.2f}%\")"
    ]
   },
   {
